tests/errors/concrete_component_require_pin_num.nm
component Foo {
    prefix = "U";
    footprint = "foo";

    pin A: input;
    pin B: output;
}

abstract component Main {
    net x, y;

    Foo {
        A: x;
        B: y;
    }

    Foo {
        A: y;
        B: x;
    }
}